force-app/main/default/objects/Opportunity_Sales_Order__c/Opportunity_Sales_Order__c.object-meta.xml
<CustomObject>
    <label>Opportunity Sales Order</label>
    <nameField>
        <label>Opportunity Sales Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Sales Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>