force-app/main/default/objects/Opportunity_Sales_Order__c/fields/Contract_Option__c.field-meta.xml
<CustomField>
    <fullName>Contract_Option__c</fullName>
    <formula>Opportunity_Line__r.Contract_Option__r.Customer_Contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Option</label>
    <type>Text</type>
</CustomField>