force-app/main/default/objects/Opportunity_Sales_Order__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <formula>Opportunity_Line__r.Opportunity_Line__r.RecordType.Name</formula>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>