force-app/main/default/objects/Opportunity_Sales_Order__c/fields/Current_Ext_Sales_Excluding_Tax__c.field-meta.xml
<CustomField>
    <fullName>Current_Ext_Sales_Excluding_Tax__c</fullName>
    <formula>(Sales_Order__r.Current_Price__c - Sales_Order__r.Current_Tax__c) *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Ext Sales (Excluding Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>