force-app/main/default/objects/Opportunity_Sales_Order__c/fields/Date_Booked__c.field-meta.xml
<CustomField>
    <fullName>Date_Booked__c</fullName>
    <formula>if( Quantity__c &gt; 0, Opportunity_Line__r.Date_Booked__c,   Date_Cancelled__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Booked</label>
    <type>Date</type>
</CustomField>