force-app/main/default/objects/Opportunity_Sales_Order__c/fields/Date_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Date_Cancelled__c</fullName>
    <description>The date a cancelled order is booked</description>
    <label>Date Cancelled</label>
    <type>Date</type>
</CustomField>