force-app/main/default/objects/Opportunity_Sales_Order__c/fields/Forecasted_Margin__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Margin__c</fullName>
    <formula>Sales_Order__r.Forecasted_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>