force-app/main/default/objects/Opportunity_Sales_Order__c/fields/Internal_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Name__c</fullName>
    <formula>Opportunity_Line__r.Opportunity_Line__r.Account.Internal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Name</label>
    <type>Text</type>
</CustomField>