force-app/main/default/objects/Opportunity_Sales_Order__c/fields/isOwner__c.field-meta.xml
<CustomField>
    <fullName>isOwner__c</fullName>
    <formula>IF(Opportunity_Line__r.Opportunity_Line__r.OwnerId = $User.Id, 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isOwner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>