force-app/main/default/objects/Opportunity_Sales_Order__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <formula>TEXT( Sales_Order__r.Mode__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mode</label>
    <type>Text</type>
</CustomField>