force-app/main/default/objects/Opportunity_Sales_Order__c/fields/OwnerGoal__c.field-meta.xml
<CustomField>
    <fullName>OwnerGoal__c</fullName>
    <formula>Opportunity_Line__r.Opportunity_Line__r.Owner.Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>