force-app/main/default/objects/Opportunity_Sales_Order__c/fields/PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>PO_Amount__c</fullName>
    <formula>Opportunity_Line__r.PO_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>