force-app/main/default/objects/Opportunity_Sales_Order__c/fields/PO_Reference__c.field-meta.xml
<CustomField>
    <fullName>PO_Reference__c</fullName>
    <formula>Opportunity_Line__r.PO_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Reference</label>
    <type>Text</type>
</CustomField>