force-app/main/default/objects/Opportunity_Sales_Order__c/fields/Reference_Contract__c.field-meta.xml
<CustomField>
    <fullName>Reference_Contract__c</fullName>
    <formula>Opportunity_Line__r.Reference_Contract__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Contract</label>
    <type>Text</type>
</CustomField>