force-app/main/default/objects/Opportunity_Sales_Order__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Opportunity Lines</relationshipLabel>
    <relationshipName>Opportunity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>