force-app/main/default/objects/Opportunity_Sales_Order__c/fields/Serial_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Serial_Numbers__c</fullName>
    <formula>IF(Quantity__c &gt; 0, Sales_Order__r.Name &amp; &quot; - &quot; &amp; Text(VALUE(Sales_Order__r.Name) + Quantity__c - 1), &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Numbers</label>
    <type>Text</type>
</CustomField>