force-app/main/default/objects/Opportunity_Sales_Order__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <formula>TEXT(Sales_Order__r.Style__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Style</label>
    <type>Text</type>
</CustomField>