force-app/main/default/objects/Opportunity_Sales_Order__c/validationRules/Cancel_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_date</fullName>
    <active>true</active>
    <description>Date Cancelled requited when a negative quantity</description>
    <errorConditionFormula>AND( Quantity__c &lt; 0, ISBLANK(Date_Cancelled__c))</errorConditionFormula>
    <errorMessage>Please include Date Cancelled</errorMessage>
</ValidationRule>