force-app/main/default/objects/Opportunity_Sales_Order__c/validationRules/Cancel_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Order</fullName>
    <active>true</active>
    <description>Do not use 0 to cancel a sales order</description>
    <errorConditionFormula>Quantity__c =0</errorConditionFormula>
    <errorMessage>Do not cancel and order by setting to 0, clone this Opportunity Sales Order then set to a negative value for cancelling</errorMessage>
</ValidationRule>